feat(handler): handlers + db migrations
